--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 						<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 wow fadeInRight" data-wow-delay="0.4s">
 
 							<div style="padding-left: 3em; padding-top:2em;padding-bottom:1em;">
-								<h3>Redesign at Lexmark</h3>
+								<h3>Lexmark</h3>
 								<h4>UX DESIGN INTERN | SUMMER 2019</h4>
 								<p style="padding-top:.7em;">Collaborated with developers and managers to redesign an internal service tool with 5000+ users.</p>
 							</div>
