--- a/lexmark.html
+++ b/lexmark.html
@@ -65,10 +65,9 @@
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h1>Internship at Lexmark</h1>
+					<h1>ServiceNow Redesign</h1>
 <h2>
-I redesigned Lexmark's internal tool to improve its information architecture, interface design, and interaction design for a better user experience
-
+I helped decrease cost at Lexmark by redesigning their internal service tool, ServiceNow, and streamlining employees' workflows
 
 
 </h2>
@@ -87,7 +86,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 <div class="row" style="padding-top:75px;">
 					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">My Role</span><br>I conducted user research, led the design direction, and measured the success of the redesign
+									<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">My Role</span><br>I conducted user research, led the design direction, and prepared documentation for developer hand-off
 </p>
 										</div>
 										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
@@ -100,10 +99,10 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 				<div class="row">
 									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-													<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Internship Duration</span><br> 3 months</p>
+													<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Duration</span><br> 3 months</p>
 														</div>
 														<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-															<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Tools</span><br> Axure, Sketch, Principle</p>
+															<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Tools</span><br> Axure, Sketch</p>
 																</div>
 								</div>
 			</div>
@@ -200,6 +199,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Solution at glance</h4>
 					<h3>Usability score of the platform increased from 53% to 89%</h3>
+
 				</div>
 			</div>
 		</div>
@@ -245,17 +245,15 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 	<section>
 		<div class="contentblock">
-			<div class="row">
 
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-<h4 class="textcenter">Example Pain Points</h4>
-</div></div>
 
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
+					<h4>Example Pain Points</h4><br>
+
 	<p><span style= "font-weight:600;">1 - Unnecessary back & forth clicks</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p><br>
 
 
@@ -292,19 +290,43 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Baseline usability test</h4>
+
 					<h3>People were failing 47% of the time</h3>
 					<p>Employees were failing almost once out of every two attempts to find the right form. The usability tests helped me pinpoint the exact steps in the user flow where users were making errors.</p></div></div>
 					<div class="row">
-						<div class="col-lg-3 col-md-3 col-sm-3">
-							<img src="images/lexmarkbaselinesuccessnumber.png" class="img-responsive" style="max-width:100%">
-				</div>
+
 						<div class="col-lg-9 col-md-9 col-sm-9">
-							<img src="images/lexmarkbaselinesuccessgraph.png" class="img-responsive" style="max-width:100%">
+							<img src="images/baselineusability.png" class="img-responsive" style="max-width:100%; box-shadow: 0 0 10px; color: #EBEBEB;">
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3">
+					<p> <span style= "font-weight:600;">Test Details<br>
+					53% Success Rate</span><br>10 Tasks<br>10 Target users</p>
+			</div>
+
+				</div>
+</div>
+	</section>
+
+
+	<section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Card Sort</h4>
+					<h3>New information architecture</h3>
+					<p>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p></div></div>
+					<div class="row">
+						<div class="col-lg-12 col-md-12 col-sm-12">
+							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%">
+				</div>
 				</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+
+
 
 	<section>
 		<div class="contentblock content-wrapper900">
@@ -339,16 +361,18 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 
 	</section>
 
+
+
 	<section>
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Solution - Card Sort</h4>
-					<h3>New information architecture</h3>
-					<p>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p></div></div>
+					<h4>Wireframes</h4>
+					<h3>Working with technical limitations</h3>
+					<p>Initially, I was exploring different ways to design a single column form. There was plenty of research online that supported single column as best practice. However, when I was showing wireframes for a one column design to the developer, she stated we needed to stick with the original two column design format.</p></div></div>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12">
-							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%">
+							<img src="images/lexmarkwireframes.png" class="img-responsive center" style="max-width:100%">
 				</div>
 				</div>
 				</div>
@@ -357,13 +381,34 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 	</section>
 
 
+	<section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Mockup</h4>
+					<h3>Working with Lexmark's components library</h3>
+					<p>Although I had my own vision for the visual design, I had to work with spec that already existed at Lexmark. ServiceNow was a huge platform and I was only working on the Facilities & Site section of the platform. The argument that this specific section needed to look completely different from the rest was a weak one. For the first mock up, I designed within Lexmark's design system.</p></div></div>
+					<div class="row">
+						<div class="col-lg-6 col-md-6 col-sm-12">
+							<img src="images/ergonomic_furniture.png" class="img-responsive center" style="max-width:100%;  box-shadow: 0 0 10px; color: #EBEBEB;">
+				</div>
+
+				<div class="col-lg-6 col-md-6 col-sm-12">
+					<img src="images/lexington_page.png" class="img-responsive center" style="max-width:100%;  box-shadow: 0 0 10px; color: #EBEBEB;">
+		</div>
+
+				</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 	<section>
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Solution - Interface Design</h4>
+					<h4>Deep Dive</h4>
 					<h3>Content heavy screens does not have to have a bad UX</h3>
 				</div>
 			</div>
@@ -416,19 +461,19 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Solution - Interaction Design</h4>
 					<h3>Aha moment! Forms can be dynamic</h3>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
-					<img src="images/lexmarkinteraction1.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
+				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
+					<img src="images/lexmarkoldcharge.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
+
 				</div>
-				<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
-					<img src="images/lexmarkhomepage.png" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;">
-				</div> -->
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+					<img src="images/lexmark1.gif" class="img-responsive" style="max-width:100%; float:right; padding: 25px 0px;   box-shadow: 0 0 10px; color: #EBEBEB;">
+				</div>
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br>
-	<br>
+<br>
 													<p> <span style= "font-weight:600;">What's changed?
 													</span><br>Previously, there were 8 input fields even when they weren't always necessary. For the redesign, there are two input fields that can be replicated as necessary</p>
 		</div>
@@ -468,7 +513,7 @@ I redesigned Lexmark's internal tool to improve its information architecture, in
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="padding-top:15px;">
 
-					<iframe title="vimeo-player" src="https://player.vimeo.com/video/384256205?muted=1&title=0&byline=0&portrait=0" width="640" height="430" frameborder="0" allowfullscreen></iframe><br><br><br>
+			<iframe title="vimeo-player" src="https://player.vimeo.com/video/420746318?muted=1&title=0&byline=0&portrait=0" width="640" height="400" frameborder="0" allowfullscreen style="box-shadow: 0 0 10px; color: #EBEBEB;"></iframe>
 				</div>
 			</div>
 </section>
