--- a/lexmark.html
+++ b/lexmark.html
@@ -67,7 +67,9 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1>ServiceNow Redesign</h1>
 <h2>
-I helped decrease cost at Lexmark by redesigning their internal service tool, ServiceNow, and streamlining employees' workflows
+	ServiceNow is a customizable SaaS web app for Lexmark employees. Employees can submit request forms for any necesary services or jobs on the platform.
+
+<br><br>
 
 
 </h2>
@@ -85,25 +87,27 @@ I helped decrease cost at Lexmark by redesigning their internal service tool, Se
 
 
 <div class="row" style="padding-top:75px;">
-					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">My Role</span><br>I conducted user research, led the design direction, and prepared documentation for developer hand-off
+	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+		<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">Team</span><br>UX Team Manager<br> UX Researcher<br>UX Design Intern (ahem, me!)
+
+		</p>
+			</div>
+				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">My Role</span><br>I conducted user research, led the design direction, built a fully functioning prototype, and prepared the documentation for developer hand-off
 </p>
 										</div>
-										<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-											<p style="padding-bottom: 5px;"> <span style= "font-weight:600;">Team</span><br>UX design manager, researcher, designer (me 👋🏼)
 
-											</p>
-												</div>
 
 				</div>
 
 				<div class="row">
-									<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-													<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Duration</span><br> 3 months</p>
+					<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+						<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Tools</span><br> Axure, Sketch</p>
+							</div>	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+
+													<p style="padding-bottom: 5px;"><span style= "font-weight:700;">Duration</span><br> 3 months</p>
 														</div>
-														<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-															<p style="padding-bottom: 5px;"><span style= "font-weight:600;">Tools</span><br> Axure, Sketch</p>
-																</div>
+
 								</div>
 			</div>
 		</div>
@@ -124,14 +128,12 @@ I helped decrease cost at Lexmark by redesigning their internal service tool, Se
         </div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
 					<p><span style= "font-weight:700;">Overview</span><br></p>
-					<p>As a Lexmark UX design intern, I led a user-centered approach to redesign ServiceNow.
-</p>
-					<p>ServiceNow is a customizable SaaS for technical management support for Lexmark employees. Lexmark employees can submit request forms for a wide variety of jobs or services on the ServiceNow platform.
-					</p>
 
-					<p>There was a consensus among employees that ServiceNow created more problems than it solved.</p>
+					<p>There was a consensus among employees that ServiceNow created more problems than it solved. Luckily, the UX team had an intern.</p>
 
-					<p style="font-weight:600;">The outcome of my redesign was an enhanced usability score of a 36% improvement and higher employee satisfaction ratings.</p>
+					<p style="font-weight:600;">The outcome of my redesign? <br>
+						➡️ An enhanced usability score of a 36% improvement<br>
+						➡️ Higher employee satisfaction ratings</p>
 				</div>
     </div>
 
@@ -152,8 +154,12 @@ I helped decrease cost at Lexmark by redesigning their internal service tool, Se
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-					<p>Of all service requests, ServiceNow received only 12% of service requests. With the remaining tens of thousands of service requests coming in through phone calls, the phone lines were always busy and required extra employees. Employees calling in couldn't promptly do their actual work because they were experiencing longer wait times.
-					</p>
+					<p>ServiceNow received only 12% of requests and the rest of 30,000 requests came through phone calls.</p>
+
+	<p><span style= "font-weight:600;">Busy phone lines were costly</span><br>
+Extra employees were required to pick up calls. <br>
+Employees calling in had longer wait times.<br>ServiceNow ROI was abysmal.</p>
+
 				</div>
 
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
@@ -169,7 +175,9 @@ I helped decrease cost at Lexmark by redesigning their internal service tool, Se
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<img src="images/lexmarkchallenge.png" class="img-responsive center" style="max-width:100%"><br><br>
+					<h2 class="text-center" style="font-weight:bold;       padding-bottom: 0%;
+">How might we improve the user experience of ServiceNow to help increase engagement?</h2>
+					<!-- <img src="images/lexmarkchallenge.png" class="img-responsive center" style="max-width:100%"><br><br> -->
 					</p>
 				</div>
 			</div>
@@ -235,7 +243,7 @@ I helped decrease cost at Lexmark by redesigning their internal service tool, Se
 			</div>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:5em;">
+							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:5em; padding-top:1em;">
 
 						</div>
 					</div>
@@ -252,7 +260,7 @@ I helped decrease cost at Lexmark by redesigning their internal service tool, Se
 					<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
-					<h4>Example Pain Points</h4><br>
+					<h4 style="padding-bottom:5px;">Interface Pain Points</h4>
 
 	<p><span style= "font-weight:600;">1 - Unnecessary back & forth clicks</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p><br>
 
@@ -271,7 +279,9 @@ I helped decrease cost at Lexmark by redesigning their internal service tool, Se
 			</div>
 			<div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" style="max-width:450px; padding-bottom: 5em;">
 
-												<p> <span style= "font-weight:600;"><br><br> 3 - Poor Content Hierarchy</span><br> The content of the form was not digestable at a glance.
+				<br><br>	<h4 style="padding-bottom:5px;">Form Pain Points</h4>
+
+<p> <span style= "font-weight:600;"> 3 - Poor Content Hierarchy</span><br> The content of the form was not digestable at a glance.
 													<br>
 											</p>
 														<p><span style= "font-weight:600;">4 - Lack of Help</span><br>Users were left to fend for themselves when they were unsure of what the options were.</p>
