--- a/lexmark.html
+++ b/lexmark.html
@@ -67,7 +67,7 @@
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h1>ServiceNow Redesign</h1>
 <h2>
-	ServiceNow is a customizable SaaS web app for Lexmark employees. Employees can submit request forms for any necesary services or jobs on the platform.
+	ServiceNow is a customizable SaaS web app for Lexmark employees. Employees can submit request forms for any necessary services or jobs on the platform.
 
 <br><br>
 
@@ -93,7 +93,7 @@
 		</p>
 			</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">My Role</span><br>I conducted user research, led the design direction, built a fully functioning prototype, and prepared the documentation for developer hand-off
+									<p style="padding-bottom: 5px;"> <span style= "font-weight:700;">My Role</span><br>I conducted user research, led the design direction, built a fully functioning prototype, and prepared the documentation for developer hand-off.
 </p>
 										</div>
 
@@ -129,11 +129,11 @@
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
 					<p><span style= "font-weight:700;">Overview</span><br></p>
 
-					<p>There was a consensus among employees that ServiceNow created more problems than it solved. Luckily, the UX team had an intern.</p>
+					<p>There was a consensus among employees that ServiceNow created more problems than it solved. Fortunately, the UX team had an intern to help improve the platform.</p>
 
-					<p style="font-weight:600;">The outcome of my redesign? <br>
-						➡️ An enhanced usability score of a 36% improvement<br>
-						➡️ Higher employee satisfaction ratings</p>
+					<p>The outcome of my redesign was
+						an enhanced usability score of a 36% improvement and
+						employees reporting higher satisfaction ratings.</p>
 				</div>
     </div>
 
@@ -154,17 +154,16 @@
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
-					<p>ServiceNow received only 12% of requests and the rest of 30,000 requests came through phone calls.</p>
+					<p>ServiceNow only received 12% of service requests. In the past 12 months, the phone lines received 20,000+ requests and were often busy.
+					</p>
 
-	<p><span style= "font-weight:600;">Busy phone lines were costly</span><br>
-Extra employees were required to pick up calls. <br>
-Employees calling in had longer wait times.<br>ServiceNow ROI was abysmal.</p>
+	<p>Busy phone lines meant additional employees were required, and employees experienced longer wait times. ServiceNow ROI was abysmal!</p>
 
 				</div>
 
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
 					<img src="images/lexmarkemoji.png" class="img-responsive center" style="max-width:85%; float:center; padding-top:2em;">
-				<br>	<p style="text-align:center; padding-bottom:3em; font-weight:bold;">ServiceNow Team</p>
+				<br>	<p style="text-align:center; padding-bottom:3em;  font-size: 14px;">ServiceNow Team</p>
 
 				</div>
 			</div>
@@ -175,7 +174,7 @@ Employees calling in had longer wait times.<br>ServiceNow ROI was abysmal.</p>
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h2 class="text-center" style="font-weight:bold;       padding-bottom: 0%;
+					<h2 class="text-center" style="font-weight:bold;       padding-bottom: 0%;   font-size: 18.5px;
 ">How might we improve the user experience of ServiceNow to help increase engagement?</h2>
 					<!-- <img src="images/lexmarkchallenge.png" class="img-responsive center" style="max-width:100%"><br><br> -->
 					</p>
