--- a/lexmark.html
+++ b/lexmark.html
@@ -150,7 +150,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>THE PROBLEM</h4>
-					<h3 style="line-height: 1.5em;">People weren't using ServiceNow as much as they should<h3></div></div>
+					<h3 style="line-height: 1.5em; color:#ffffff;">People weren't using ServiceNow as much as they should<h3></div></div>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
@@ -166,34 +166,21 @@
 				<br>	<p style="text-align:center; padding-bottom:3em;  font-size: 14px;">ServiceNow Team</p>
 
 				</div>
-			</div>
+			</div><br><br><br>
 		</div>
 	</section>
 
-	<section>
-		<div class="contentblock content-wrapper900">
+
+	<section id="gifbg">
+		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h2 class="text-center" style="font-weight:bold;       padding-bottom: 0%;   font-size: 18.5px;
-">How might we improve the user experience of ServiceNow to help increase engagement?</h2>
-					<!-- <img src="images/lexmarkchallenge.png" class="img-responsive center" style="max-width:100%"><br><br> -->
-					</p>
-				</div>
-			</div>
-		</div>
+					<h4 style="color:#ffffff;">THE challenge</h4>
+					<h3 style="line-height: 1.5em; color:#ffffff;">How might we improve the user experience of ServiceNow to help increase engagement?
+<h3></div></div></div>
 	</section>
 
-	<!-- <section>
-		<div class="contentblock content-wrapper900">
-			<div class="row">
-				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>The challenge</h4>
-					<h3>How can I increase the usage of ServiceNow?</h3>
-					<p>Slapping CTA buttons weren't going to cut it. After interviewing target users (manager, administrative assistant, and request handler), it was obvious ServiceNow had problems with its UX that went beyond confusing UI.</p>
-				</div>
-			</div>
-		</div>
-	</section> -->
+
 
 
 
@@ -236,7 +223,7 @@
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<h4>Interviews</h4>
+					<br><br><br><br><h4>Interviews</h4>
 					<h3>There was ample opportunity to improve the platform</h3>
 				</div>
 			</div>
