--- a/lexmark.html
+++ b/lexmark.html
@@ -150,7 +150,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>THE PROBLEM</h4>
-					<h3 style="line-height: 1.5em; color:#ffffff;">People weren't using ServiceNow as much as they should<h3></div></div>
+					<h3 style="line-height: 1.5em;">People weren't using ServiceNow as much as they should<h3></div></div>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
@@ -162,7 +162,7 @@
 				</div>
 
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
-					<img src="images/lexmarkemoji.png" class="img-responsive center" style="max-width:85%; float:center; padding-top:2em;">
+					<img src="images/lexmarkemoji.png" class="img-responsive center" style="max-width:85%; float:center; padding-top:1.5em;">
 				<br>	<p style="text-align:center; padding-bottom:3em;  font-size: 14px;">ServiceNow Team</p>
 
 				</div>
