--- a/lexmark.html
+++ b/lexmark.html
@@ -129,11 +129,11 @@
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
 					<p><span style= "font-weight:700;">Overview</span><br></p>
 
-					<p>There was a consensus among employees that ServiceNow created more problems than it solved. Fortunately, the UX team had an intern to help improve the platform.</p>
+					<p>There was an employee consensus that ServiceNow created more problems than it solved. Luckily, the UX team had an intern to share with the ServiceNow team.</p>
 
 					<p>The outcome of my redesign was
 						an enhanced usability score of a 36% improvement and
-						employees reporting higher satisfaction ratings.</p>
+					 a higher average of employee satisfaction ratings.</p>
 				</div>
     </div>
 
@@ -157,7 +157,7 @@
 					<p>ServiceNow only received 12% of service requests. In the past 12 months, the phone lines received 20,000+ requests and were often busy.
 					</p>
 
-	<p>Busy phone lines meant additional employees were required, and employees experienced longer wait times. ServiceNow ROI was abysmal!</p>
+	<p>Busy phone lines meant additional employees were required, and employees experienced longer wait times. ServiceNow ROI was abysmal.</p>
 
 				</div>
 
