--- a/lexmark.html
+++ b/lexmark.html
@@ -176,7 +176,7 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4 style="color:#ffffff;">THE challenge</h4>
-					<h3 style="line-height: 1.5em; color:#ffffff;">How might we improve the user experience of ServiceNow to help increase engagement?
+					<h3 style="line-height: 1.5em; color:#ffffff;">How might we improve the user experience of ServiceNow to help increase its engagement?
 <h3></div></div></div>
 	</section>
 
@@ -247,12 +247,21 @@
 				</div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em;"><br><br>
 					<h4 style="padding-bottom:5px;">Interface Pain Points</h4>
+					<div class='parent'>
+						<p><div class='numberCircle inline-block-child'>1</div>
+							<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Unnecessary back & forth clicks</span>
+						</p>
+					</div>
 
-	<p><span style= "font-weight:600;">1 - Unnecessary back & forth clicks</span><br> The IA did not reflect employee's mental models and caused unnecessary additional searching behaviors.</p><br>
+	<p>The IA did not reflect the employee's mental models. Unnecessary searching behavior was rampant.</p>
 
+	<div class='parent'>
+		<p><div class='numberCircle inline-block-child'>2</div>
+			<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;"> Too much guesswork</span>
+		</p>
+	</div>
 
-													<p> <span style= "font-weight:600;">2 - Too much guesswork</span><br>The form titles in the dropdown were unclear and employees weren't sure of what they were clicking on. <br>
-												</p>
+<p>The form titles in the dropdown were unclear. Employees weren't sure of what to expect.												</p>
 
 
 
@@ -267,11 +276,28 @@
 
 				<br><br>	<h4 style="padding-bottom:5px;">Form Pain Points</h4>
 
-<p> <span style= "font-weight:600;"> 3 - Poor Content Hierarchy</span><br> The content of the form was not digestable at a glance.
-													<br>
-											</p>
-														<p><span style= "font-weight:600;">4 - Lack of Help</span><br>Users were left to fend for themselves when they were unsure of what the options were.</p>
-	<p><span style= "font-weight:600;">5 - Error prone</span><br> Options with either/or relationships involved checkboxes rather than radio buttons</p>
+				<div class='parent'>
+					<p><div class='numberCircle inline-block-child'>3</div>
+						<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Poor Content Hierarchy</span>
+					</p>
+				</div>
+
+			<p>The content of the form was not digestable at a glance and the long form was overwhelming.						</p>
+
+			<div class='parent'>
+				<p><div class='numberCircle inline-block-child'>4</div>
+					<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Lack of Help</span>
+				</p>
+			</div>
+
+		<p>Users were left to fend for themselves when they were unsure of what the options were.</p>
+
+		<div class='parent'>
+			<p><div class='numberCircle inline-block-child'>5</div>
+				<span style="	font-family: 'Raleway', sans-serif; font-size: 16px; margin-left: 7px; line-height: 1.7em; font-weight:600;">Error Prone</span>
+			</p>
+		</div>
+	<p>Options with either/or relationships involved checkboxes rather than radio buttons</p>
 			</div>
 	</div>
 </div>
