--- a/lexmark.html
+++ b/lexmark.html
@@ -219,7 +219,7 @@
 
 
 
-	<section>
+	<section >
 		<div class="content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -237,9 +237,13 @@
 		</div>
 	</section>
 
-	<section>
-		<div class="contentblock">
-
+	<section id="graybg">
+		<div class="content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+			<h4>Baseline Usability Test</h4>
+			<h3>Employees were failing 47% of their attempts at their job</h3>
+</div></div></div>
 
 			<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
