--- a/lexmark.html
+++ b/lexmark.html
@@ -242,10 +242,29 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<h4>Baseline Usability Test</h4>
-			<h3>Employees were failing 47% of their attempts at their job</h3>
-</div></div></div>
+			<h3>Employees were failing 47% of the time on ServiceNow</h3>
+</div></div>
 
-			<div class="row">
+<div class="row">
+<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+	<p>The interviews helped validate the existence of a problem, but we needed more concrete data. I conducted usability tests with ten employees on the ten most common tasks to identify the exact steps in the user flow that created all the mentioned problems. Closer look at data collection can be found <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">here</a>.</p>
+
+
+<!-- <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
+
+<button class="button button2" onclick=" window.open('https://kminjin.github.io/images/thrivestyleguide.pdf','_blank')">View Style Guide</button>
+</div> -->
+<!-- <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
+
+<p> <span style= "font-weight:700;">1. Typography</span><br>Typeface needed to work with headers, body copy, and captions. I chose the classic and accessible Source Sans Pro for optimal legibility.</p>
+<img src="images/thrivetypeface.png" class="img-responsive">
+
+
+ -->
+</div></div>	</div>
+
+	<div class="row">
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 					<img src="images/lexmarkinterface.png" class="img-responsive" style="max-width:600px; float:right; padding: 25px 0px;">
 				</div>
@@ -286,7 +305,7 @@
 					</p>
 				</div>
 
-			<p>The content of the form was not digestable at a glance and the long form was overwhelming.						</p>
+			<p>The contents of the form were not digestable at a glance and the long forms were overwhelming.						</p>
 
 			<div class='parent'>
 				<p><div class='numberCircle inline-block-child'>4</div>
@@ -304,18 +323,49 @@
 	<p>Options with either/or relationships involved checkboxes rather than radio buttons</p>
 			</div>
 	</div>
+
+
+
 </div>
+
+<!-- <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+<button class="button button2 center" onclick=" window.open('https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing','_blank')">Data Collection</button>
+</div> -->
+
+
+
 	</section>
 
 
+	<!-- <section>
+		<div class="contentblock content-wrapper900">
+			<div class="row">
+				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+					<h4>Baseline usability test</h4>
+
+					<h3>People were failing 47% of the time</h3>
+					<p>Employees were failing almost once out of every two attempts to find the right form. The usability tests helped me pinpoint the exact steps in the user flow where users were making errors.</p></div></div>
+					<div class="row">
+
+						<div class="col-lg-9 col-md-9 col-sm-9">
+							<img src="images/baselineusability.png" class="img-responsive" style="max-width:100%; box-shadow: 0 0 10px; color: #EBEBEB;">
+				</div>
+				<div class="col-lg-3 col-md-3 col-sm-3">
+					<p> <span style= "font-weight:600;">Test Details<br>
+					53% Success Rate</span><br>10 Tasks<br>10 Target users</p>
+			</div>
+
+				</div>
+	</div>
+	</section> -->
 
 
 
-	
 
 
 	<section>
-		<div class="contentblock content-wrapper900">
+		<div class="content-wrapper900 contentblock" style="padding-top:10em;">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Card Sort</h4>
