--- a/thrive.html
+++ b/thrive.html
@@ -80,7 +80,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 	</section>
 
 	<section>
-	<div class="contentblock content-wrapper900" style="padding-top: 3em;">
+	<div class="intro content-wrapper900" style="padding-top: 3em;">
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
 				<p class="overview-info">Role</p>
@@ -103,7 +103,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 	</section>
 
 	<section>
-		<div class="contentblock content-wrapper900">
+		<div class="intro content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>context</h4>
@@ -117,7 +117,7 @@ Thrive is a mobile app-based solution that helps people eat less meat
 	</section>
 
 <section>
-	<div class="contentblock content-wrapper900">
+	<div class="intro content-wrapper900">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<h4>The problem</h4>
