--- a/lexmark.html
+++ b/lexmark.html
@@ -83,7 +83,7 @@
 	</section>
 
 	<section>
-		<div class="contentblock content-wrapper900">
+		<div class="intro content-wrapper900">
 
 
 <div class="row" style="padding-top:75px;">
@@ -116,7 +116,7 @@
 
 
 	<section>
-    <div class="contentblock">
+    <div class="intro">
 
 
 			<div class="row">
@@ -124,7 +124,7 @@
         <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 
 						<img src="images/lexmarkhome.png" class="img-responsive" style="max-width:85%; float:right; padding-top:25px; padding-bottom: 15px;">
-						<img src="images/lexmarkhomedescription.png" class="img-responsive" style="max-width:470px; float: right; padding: 0px 5px;">
+						<img src="images/lexmarkhomedescription.png" class="img-responsive" style="max-width:470px; float: right; padding: 0px 5px; padding-bottom:25px;">
         </div>
 				<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="max-width:450px; padding-bottom: 5em; padding-top: 20px;">
 					<p><span style= "font-weight:700;">Overview</span><br></p>
@@ -219,17 +219,17 @@
 
 
 
-	<section >
-		<div class="content-wrapper900">
+	<section>
+		<div class="content-wrapper900" style="padding-top:9%">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-					<br><br><br><br><h4>Interviews</h4>
+					<h4>Interviews</h4>
 					<h3>There was ample opportunity to improve the platform</h3>
 				</div>
 			</div>
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:5em; padding-top:1em;">
+							<img src="images/lexmarkpersonas.png" class="img-responsive center" style="max-width:100%; padding-bottom:15%; padding-top:1em;">
 
 						</div>
 					</div>
