--- a/lexmark.html
+++ b/lexmark.html
@@ -248,7 +248,7 @@
 <div class="row">
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-	<p>The interviews helped validate the existence of a problem, but we needed more concrete data. I conducted usability tests with ten employees on the ten most common tasks to identify the exact steps in the user flow that created all the mentioned problems. Closer look at data collection can be found <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">here</a>.</p>
+	<p>The interviews helped with problem validation, but we needed concrete data. I conducted <a href="https://docs.google.com/spreadsheets/d/1SlCxbpEKPWVJ7s8gs7EJzdZls9d8B0EYzVQlfBaER04/edit?usp=sharing" class="lexmarklink" target="_blank">usability tests</a> with ten employees on the ten most common tasks to identify the exact problematic steps in the user flow. </p>
 
 
 <!-- <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
