--- a/lexmark.html
+++ b/lexmark.html
@@ -369,13 +369,39 @@
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Card Sort</h4>
-					<h3>New information architecture</h3>
-					<p>In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors.</p></div></div>
+					<h3>When working on an internal tool, target users are close</h3>
+					<p>We conducted open card sorts with Lexmark employees to create ServiceNow's new information architecture. With the new IA, we eliminated unnecessary searching behaviors and reduced browsing time.
+
+
+						<!-- In the previous design, location selection happened at different points the hierarchy. Often times, employees sifted through multiple forms that did not even pertain to their location when trying to find the right forms. The new design prioritizes location first to cut out any unnecessary searching behaviors. -->
+					</p></div></div>
 					<div class="row">
-						<div class="col-lg-12 col-md-12 col-sm-12">
+						<div class="col-lg-8 col-md-8 col-sm-12">
 							<img src="images/lexmarkinfoarchitecture.png" class="img-responsive center" style="max-width:100%">
 				</div>
+
+				<div class="col-lg-4 col-md-4 col-sm-12">
+<br><br>
+				<p> <span style= "font-weight:bold;">Original Pain Points</span><br>Employees saw forms that weren't relevant to their location. It led to unnecessary clicks.</p>
+</div>
+
 				</div>
+				<br><br>
+
+
+
+				<div class="row">
+					<div class="col-lg-8 col-md-8 col-sm-12">
+						<img src="images/lexmarkinfoarch.png" class="img-responsive center" style="max-width:100%">
+			</div>
+
+			<div class="col-lg-4 col-md-4 col-sm-12">
+<br>
+			<p> <span style= "font-weight:bold;">The Redesign</span><br>Employees no longer need to click back and forth within the IA. Every new level helps them become closer to their goal.</p>
+</div>
+
+			</div>
+
 				</div>
 			</div>
 		</div>
@@ -383,39 +409,35 @@
 
 
 
-
+<!--
 	<section>
 		<div class="contentblock content-wrapper900">
 			<div class="row">
 				<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 					<h4>Ideation</h4>
-					<h3>Considerations</h3>
+					<h3>"Aha!" moments that determined my design direction</h3>
+<p>
 	</div></div>
 			<div class= "row">
-				<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/numberone.png" class="img-responsive" style="max-width:90%"></div>
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<img src="images/numberone.png" class="img-responsive" style="max-width:50px">
 
-				<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
-				<p>Forms do not always have to display all the information at first load. Make information appear based on what they select in the forms. Keep forms dynamic.</p><br><br>
-			</div></div>
-			<div class= "row">
-				<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/numbertwo.png" class="img-responsive" style="max-width:90%"></div>
+						<p>Forms do not have to display all of the content at first load. Keep forms dynamic.</p>
+					</div>
 
-				<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
-				<p>Prevent user error by keeping the information digestible at a glance and limiting user actions (e.g. using radio buttons rather than checkboxes will only allow users to select one option).</p><br><br>
-			</div></div>
-			<div class= "row">
-				<div class="col-lg-1 col-md-1 col-sm-3 wow fadeInUp" data-wow-delay="0.4s">
-					<img src="images/numberthree.png" class="img-responsive" style="max-width:90%"></div>
-
-				<div class="col-lg-11 col-md-11 col-sm-9 wow fadeInUp" data-wow-delay="0.4s">
-				<p>Build users' confidence in their decision making processes by giving them context such as helper texts and description. Adding text to a design does not automatically make it more complex.</p><br>
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<img src="images/numbertwo.png" class="img-responsive" style="max-width:50px;">
+	<p>Limit user action to prevent user errors.</p><br><br>
+</div>
+				<div class="col-lg-4 col-md-4 col-sm-4">
+					<img src="images/numberthree.png" class="img-responsive" style="max-width:50px;">Provide more context & help
+				<p>Adding more content to the product does not automatically make the product more complex.
+</p>
 			</div></div>
 		</div>
 	</div>
 
-	</section>
+	</section> -->
 
 
 
